[gd_scene load_steps=4 format=3 uid="uid://cfco0yimms0ml"]

[ext_resource type="Script" path="res://Summary.gd" id="1_732na"]
[ext_resource type="Texture2D" uid="uid://cswkgxo2lyq16" path="res://360_F_463512856_GEk2IrQkYatpRVR9YDhiZgRY2z00Zet3.jpg" id="2_j6nfc"]
[ext_resource type="AudioStream" uid="uid://cq8o75kim7lu0" path="res://sound/Outro.wav" id="3_3rcip"]

[node name="Summary" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_732na")

[node name="end_screen" type="Sprite2D" parent="."]
visible = false
position = Vector2(612.313, 536.75)
scale = Vector2(9.67973, 8.7625)
texture = ExtResource("2_j6nfc")

[node name="box" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="TotalEnemiesLabel" type="Label" parent="box"]
layout_mode = 2

[node name="CountByUserLabel" type="Label" parent="box"]
layout_mode = 2

[node name="CountByEnemyLabel" type="Label" parent="box"]
layout_mode = 2

[node name="RareUsersLabel" type="Label" parent="box"]
layout_mode = 2

[node name="Outro" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_3rcip")
